<resources>
    <string name="app_name">UnderRoof</string>
    <string name="SYSTEM_MESSAGE_UUID">a3d4860d-069f-40cf-a842-6310a0dc2da2</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_message_yet">No message yet.</string>
    <string name="title_contact">Contact</string>
    <string name="title_user">User</string>
    <string name="join_chat">%1$s has joined the chat.</string>
    <string name="quit_chat">%1$s has quit the chat.</string>
    <string name="unknown_system_msg">Unknown system message.</string>
    <string name="refresh">Refresh</string>
    <string name="create_new_group">Create new group</string>
    <string name="group_name">Group name</string>
    <string name="discoverable">Discoverable</string>
    <string name="group_introduction">Group introduction</string>
    <string name="create">Create</string>
    <string name="create_group_dialog_title">Create a group</string>
    <string name="wizard_dialog_title">Wizard</string>
    <string name="your_name">Your name</string>
    <string name="your_introduction">Your introduction</string>
    <string name="male">Male</string>
    <string name="_private">Private</string>
    <string name="age">Age</string>
    <string name="ok">OK</string>
    <string name="no_master">You appear to have no personal information, please click the button below.</string>
    <string name="personal_introduction">Personal Introduction</string>
    <string name="name_hint">Some people say that the first word of the name is emoji can have an avatar.</string>
    <string name="no_status">What\'s the mood?</string>
    <string name="status_title">How are you feeling today?</string>
    <string name="emoji">Enter an emoji</string>
    <string name="status_text_hint">What you want to say</string>
</resources>