<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <TextView
        android:id="@+id/dialog_wizard_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/wizard_dialog_title"
        android:layout_marginRight="16dp"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_hint"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/dialog_wizard_title"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/master_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/your_name"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintTop_toBottomOf="@id/name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/master_introduction_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/your_introduction"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:layout_constraintTop_toBottomOf="@id/master_name_edittext">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/master_age_edittext"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/age_private_checkbox"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/age"
        app:layout_constraintTop_toBottomOf="@id/master_introduction_edittext">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="number|phone"
            android:digits="1234567890"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox
        android:id="@+id/age_private_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="5"
        app:layout_constraintRight_toLeftOf="@id/age_private_text"
        app:layout_constraintTop_toTopOf="@+id/master_age_edittext"/>

    <TextView
        android:id="@+id/age_private_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:text="@string/_private"
        app:layout_constraintBottom_toBottomOf="@id/age_private_checkbox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/age_private_checkbox" />
    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/gender_private_checkbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gender_private_checkbox">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="Female" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/gender_private_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:maxLines="5"
        app:layout_constraintRight_toLeftOf="@id/gender_private_text"
        app:layout_constraintTop_toBottomOf="@id/master_age_edittext" />

    <TextView
        android:id="@+id/gender_private_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:text="@string/_private"
        app:layout_constraintBottom_toBottomOf="@id/gender_private_checkbox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/gender_private_checkbox" />

    <Button
        android:id="@+id/create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@id/gender_group" />


</androidx.constraintlayout.widget.ConstraintLayout>